# vulkan-tutorial-rs

./: .gitignore  Cargo.toml  Makefile  README.md
docker/: Dockerfile.gdown  Dockerfile.linux
lve_rs/: Cargo.toml
lve_rs/src/: buffer.rs  camera.rs  debug.rs  descriptors.rs  device.rs  frame_info.rs  game_objects.rs  lib.rs  model.rs  pipeline.rs  renderer.rs  simple_render_system.rs  surface.rs  swap_chain.rs  window.rs
lve_rs/src/controller/: keyboard.rs
lve_rs/src/extras/: gravity_physics_system.rs  mod.rs
lve_rs/src/systems/: mod.rs  point_light_system.rs  ray_trace_system.rs  simple_render_system.rs  world_render_system.rs
scripts/: build-shaders.sh  grab-pastebin.sh  grab_models.sh
shaders/: point_light.frag  point_light.vert  ray_trace.comp  simple_shader.frag  simple_shader.vert  world.frag
src/: app.rs  main.rs  ray_tracing.rs
src/extras/: mod.rs  tutorial_11.rs
