[package]
name = "vulkan-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
winit = "0.28.0"
lve_rs = { path = "./lve_rs" }
ash = "0.37.3"
nalgebra-glm = "0.18.0"
bytemuck = "1.14.0"
